# picard_gamma_sky

./: CMakeLists.txt  README.md  example_parameters.config
apps/: gamma_sky.cpp
cmake/: FindHealPix.cmake
gamma_sky_visualization/: gamma_sky_visualization.py  requirements.txt  setup.py
gamma_sky_visualization/src/: gamma_sky_visualization.py
src/: HDF5File.cpp  HDF5File.h  LineOfSightIntegral.cpp  LineOfSightIntegral.h  ParameterFile.cpp  ParameterFile.h  Sky.cpp  Sky.h  TrilinearInterpolation.cpp  TrilinearInterpolation.h  grids.cpp  grids.h  mathematics.cpp  mathematics.h  tensors.cpp  tensors.h
test/: test_LineOfSightIntegral.cpp  test_TrilinearInterpolation.cpp  test_grids.cpp  test_mathematics.cpp
